# phantomx_reactor

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  visualization.rviz
description/: gazebo_references.xacro  phantomx_reactor.urdf.xacro  phantomx_reactor_core_no_wrist.xacro  phantomx_reactor_core_wrist.xacro  ros2_control.xacro
launch/: control.launch.py  gazebo.launch.py  kinematics.launch.py  visualization.launch.py
scripts/: kinematics_client.py  kinematics_server.py
